<resources>
    <string name="app_name">DinoAd</string>

    <string name="time_format">%1$s %2$s</string>
    <string name="slide_unlock">&#160; Slide to unlock</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>


    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="input_username">Please input username</string>
    <string name="input_password">Please input password</string>
    <string name="input_retype">Please input retype password</string>
    <string name="retype_not_match">Retype password not match</string>
    <string name="wrong_username_password">Wrong username or password</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="get_account">Don\'t have an account?</string>
    <string name="have_account">I have an account!</string>

    <string name="retype_password">Retype password</string>
    <string name="btn_register">Register</string>
    <string name="txt_via">Or Via</string>

    // HomeContainerFragment
    <string name="tab_home">Home</string>
    <string name="tab_tickets">Tickets</string>
    <string name="tab_gifts">Gifts</string>
    <string name="tab_settings">Settings</string>

    <string name="see_balance">See Balance ></string>
    <string name="coupon_box">Coupon Box</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="banner_invite_friends">Invite friends \n&amp; get reward point</string>

    <string name="no_internet_connection">No Internet Connection</string>

    // PointDetailFragment
    <string name="points_detail">Points Detail</string>
    <string name="balance">Balance</string>
    <string name="total_points">Total Points</string>
    <string name="promotion_points">Promotion points</string>
    <string name="display_points">Display points</string>
    <string name="install_points">Install points</string>
    <string name="point_history_available_day">Point history is available for 14 days</string>
    <string name="install_and_run_points">Install and Run points</string>
    <string name="video_points">Video points</string>
    <string name="event_points">Event points</string>
    <string name="used_points">Used points</string>
    <string name="affiliate_points">Affiliate Video</string>
    <string name="recommendee_points">Recommendee point</string>
    <string name="recommender_points">Recommender point</string>
    <string name="signup_point">Signup point</string>
    <string name="event_point">Event point</string>

    // SettingFragment
    <string name="active_lock_screen">Activate LockScreen</string>
    <string name="notify_rewards">Notify rewards</string>
    <string name="my_info">My Info</string>
    <string name="notice">Notice</string>
    <string name="faq">FAQ</string>
    <string name="tutorial">Tutorial</string>
    <string name="customer_service">Customer Service</string>
    <string name="partnership_inquiry">Partnership Inquiry</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="delete_account">Delete Account</string>

    <string name="voucher">Voucher</string>
    <string name="prepaid_card">Prepaid Card</string>
    <string name="game_card">Game Card</string>
    <string name="end_date">End date : </string>
    <string name="coupon_count">You have %d coupons.</string>

    <string name="point_reward">%,d points is reward.</string>

    <string name="pref_active_lock_screen">active_lock_screen</string>
    <string name="pref_notify_rewards">notify_rewards</string>
    <string name="pref_delete_account">delete_account</string>
    <string name="pref_my_info">my_info</string>
    <string name="pref_open_source_licenses">open_source_licenses</string>
    <string name="save">Save</string>
    <string name="str_gender">Gender</string>
    <string name="permission_denied">Permission denied</string>

    <string-array name="str_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="str_select_avatar">Select Avatar</string>
    <string name="str_take_photo">Take photo</string>
    <string name="str_pick_photo">Pick photo</string>

    <string name="inactive_lock_screen_question">Inactive lockscreen?</string>
    <string-array name="inactive_lock_screen">
        <item>Inactive for 2 hours</item>
        <item>Inactive for 4 hours</item>
        <item>Inactive for 8 hours</item>
        <item>Inactive for a day</item>
        <item>I will turn on later</item>
    </string-array>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


    <string name="server_client_id">768403305833-3pg3hc3ek1maqemkmkoofefguvogn3oe.apps.googleusercontent.com</string>
</resources>
