<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory>
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="active_lock_screen"
            android:title="@string/active_lock_screen"/>

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="notify_rewards"
            android:title="@string/notify_rewards"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:layout="@layout/divider_preference"
        android:title="category 2">
        <android.support.v7.preference.Preference
            android:title="@string/my_info"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:layout="@layout/divider_preference"
        android:title="category 3">
        <android.support.v7.preference.Preference
            android:title="@string/notice"/>
        <android.support.v7.preference.Preference
            android:title="@string/faq"/>
        <android.support.v7.preference.Preference
            android:title="@string/tutorial"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:layout="@layout/divider_preference"
        android:title="category 4">
        <android.support.v7.preference.Preference
            android:title="@string/customer_service"/>
        <android.support.v7.preference.Preference
            android:title="@string/partnership_inquiry"/>
        <android.support.v7.preference.Preference
            android:title="@string/terms_and_conditions"/>
        <android.support.v7.preference.Preference
            android:title="@string/privacy_policy"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:layout="@layout/divider_preference"
        android:title="category 5">
        <android.support.v7.preference.Preference
            android:title="@string/delete_account"
            android:key="delete_account"/>
    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>