<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilUsername">

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilPassword"
            android:layout_below="@id/tilUsername"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:singleLine="true"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <vn.dinosys.dinoad.ui.widget.button.GuardButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/sign_in"
            android:layout_below="@id/tilPassword"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:clipToPadding="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_account"
                android:layout_marginEnd="4dp"/>

            <vn.dinosys.dinoad.ui.widget.button.GuardButton
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="0dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorAccent"
                android:padding="0dp"
                android:gravity="center"
                android:minWidth="0dp"
                android:background="@drawable/txt_bottom_line_selector"
                fontPath="fonts/MYRIADPRO-SEMIBOLD.OTF"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>