<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilUsername">

            <requestFocus/>
            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilPassword"
            android:layout_below="@id/tilUsername"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:singleLine="true"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilRetype"
            android:layout_below="@id/tilPassword"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/editRetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype_password"
                android:singleLine="true"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <vn.dinosys.dinoad.ui.widget.button.GuardButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/btn_register"
            android:layout_below="@id/tilRetype"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/textVia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnRegister"
            android:text="@string/txt_via"
            android:layout_marginTop="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@id/textVia"
            android:layout_marginTop="4dp">

            <vn.dinosys.dinoad.ui.widget.button.GuardButton
                android:id="@+id/btnLoginFaceBook"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/round_button_accent"
                android:text="f"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:layout_margin="8dp"
                fontPath="fonts/MYRIADPRO-SEMIBOLD.OTF"
                />

            <vn.dinosys.dinoad.ui.widget.button.GuardButton
                android:id="@+id/btnLoginGPlus"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/round_button_primary"
                android:text="G+"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                fontPath="fonts/MYRIADPRO-SEMIBOLD.OTF"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:clipToPadding="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:layout_marginEnd="4dp"/>

            <vn.dinosys.dinoad.ui.widget.button.GuardButton
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="0dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorAccent"
                android:padding="0dp"
                android:gravity="center"
                android:minWidth="0dp"
                android:background="@drawable/txt_bottom_line_selector"
                fontPath="fonts/MYRIADPRO-SEMIBOLD.OTF"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>